load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "babybear",
    srcs = ["babybear.go"],
    cgo = True,
    importpath = "github.com/succinctlabs/sp1-recursion-gnark/sp1/babybear",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_consensys_gnark//constraint/solver",
        "@com_github_consensys_gnark//frontend",
        "@com_github_consensys_gnark//std/rangecheck",
    ],
)
